--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" href="./isha-logo.png" />
     <link rel="stylesheet" href="./output.css" />
     <script src="./script.js" defer></script>
+    <script src="/lite-yt-embed.js"></script>
+    <link rel="stylesheet" href="/lite-yt-embed.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -43,6 +45,7 @@
             class="menu dropdown-content menu-sm z-[1] mt-3 w-52 rounded-box bg-base-100 p-2 shadow">
             <li><a href="#teacher">Teacher</a></li>
             <li><a href="#schedule">Schedule</a></li>
+            <li><a href="#programs-info">Our Programs</a></li>
             <li><a href="#school">About School</a></li>
           </ul>
         </div>
@@ -52,6 +55,7 @@
         <ul class="menu menu-horizontal px-1">
           <li><a href="#teacher">Teacher</a></li>
           <li><a href="#schedule">Schedule</a></li>
+          <li><a href="#programs-info">Our Programs</a></li>
           <li><a href="#school">About School</a></li>
         </ul>
       </div>
@@ -99,12 +103,12 @@
         twice in March and in the summer to be able to transfer these yogic practices.
       </p>
 
-      <div class="carousel carousel-center h-80 rounded-box">
+      <div class="carousel carousel-center h-80">
         <div class="carousel-item">
-          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1" />
-          <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1" />
-          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1" />
-          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1" />
+          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1 rounded-box" />
+          <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1 rounded-box" />
+          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1 rounded-box" />
+          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1 rounded-box" />
         </div>
       </div>
       <p class="merriweather text-base">
@@ -126,6 +130,7 @@
             <div class="card-body p-5">
               <h2 class="card-title">Surya Kriya</h2>
               <p>(2 sessions) March 2-3 10:00-13:00 UTC</p>
+              <p>Kruisbessenstraat 13 2564 VB The Hague</p>
               <p>
                 <b>$ 100</b>
                 ,- incl. online support
@@ -158,6 +163,88 @@
           </div>
         </div>
       </div>
+
+      <h1 class="pb-6 pt-12 text-5xl font-bold" id="programs-info">Our Programs</h1>
+
+      <details class="collapse collapse-arrow my-2 bg-base-200">
+        <summary class="collapse-title text-xl font-medium">
+          <div class="mask grid grid-cols-[120px,auto] gap-1">
+            <div class="avatar">
+              <div class="mask mask-squircle w-24">
+                <img src="/img/surya-kriya-sq.avif" />
+              </div>
+            </div>
+            <div class="prose">
+              <h3>Surya Kriya</h3>
+              <p>2 sessions x 3.5 h</p>
+            </div>
+          </div>
+        </summary>
+        <div class="prose collapse-content mx-auto">
+          <lite-youtube
+            style="aspect-ratio: 16 / 9"
+            videoid="_wq-OiPk-pU"
+            playlabel="Play"></lite-youtube>
+          <p>
+            <b>Surya Kriya</b>
+            — solar energy is the fundamental energy and that is so even within human body. Surya
+            Kriya is a powerful process of activating the sun within you. It generates sun energy
+            within the system and body begins to glow and shine. On a psychical level this process
+            balances glandular secretion, mucus level and cures backache. There is also profound
+            dimension to it. It is a way of adjusting human energy system to the celestial geometry,
+            so that you are in sync with the existence. It is being in sync with a nature on many
+            different levels.
+          </p>
+          <p>
+            <b>Surya Kriya includes several aspects that enrich one's life:</b>
+          </p>
+          <ul>
+            <li>Develops mental clarity and focus</li>
+            <li>Remedies weak constitutions</li>
+            <li>Boosts vigor and vitality</li>
+            <li>Balances hormonal levels in the body</li>
+            <li>Prepares one for deeper states of meditation</li>
+          </ul>
+        </div>
+      </details>
+
+      <details class="collapse collapse-arrow my-2 bg-base-200">
+        <summary class="collapse-title text-xl font-medium">
+          <div class="mask grid grid-cols-[120px,auto] gap-1">
+            <div class="avatar">
+              <div class="mask mask-squircle w-24">
+                <img src="/img/angamardana-sq.avif" />
+              </div>
+            </div>
+            <div class="prose">
+              <h3>Angamardana</h3>
+              <p>3 sessions x 3,5 h</p>
+            </div>
+          </div>
+        </summary>
+        <div class="prose collapse-content mx-auto">
+          <lite-youtube videoid="9aAzFTQOJJU" playlabel="Play"></lite-youtube>
+          <p>
+            <b>Angamardana</b>
+            — is an ancient fitness system rooted in Yoga which offers everyone the opportunity to
+            reach peak physical and mental health and revitalize the body. Angamardana means,
+            'Gaining Complete Mastery over the limbs, organs or other body parts. No equipment or
+            weights needed only own physical body and floor.' True to its name, this yoga practice
+            will take years (and kilo's) off your body enabling you to live a vibrant and active
+            life. Regular practice of Angamardana controls blood sugar levels, rejuvenates the body
+            and heightens and maintains energy levels throughout the day.
+          </p>
+          <p>
+            <b>Regular practice of Angamardana revitalizes the body in many ways:</b>
+          </p>
+          <ul>
+            <li>Strengthens the spine, skeletal system, and muscular system</li>
+            <li>Builds physical strength, fitness, and tenacity</li>
+            <li>Takes years off the body, bringing a sense of lightness and freedom</li>
+            <li>Prepares the body for Hatha Yoga</li>
+          </ul>
+        </div>
+      </details>
     </div>
 
     <div class="bg-accent px-6 pt-12 text-neutral-content">
@@ -170,8 +257,8 @@
       </p>
     </div>
 
-    <div class="hero bg-accent py-6 text-neutral-content" id="school">
-      <div class="hero-content flex-col lg:flex-row-reverse">
+    <div class="bg-accent py-6 text-neutral-content" id="school">
+      <div class="hero-content flex-col pb-6 lg:flex-row-reverse">
         <div>
           <figure class="mx-auto max-w-screen-md text-center">
             <svg
@@ -205,6 +292,14 @@
         </div>
         <img src="./img/sadhguru1.jpg" class="mask mask-squircle m-auto max-w-72 shadow-2xl" />
       </div>
+
+      <div class="carousel carousel-center h-80">
+        <div class="carousel-item">
+          <img src="/img/isha9.avif" alt="UA Studio" class="mx-1 rounded-box" />
+          <img src="/img/isha4.avif" alt="UA Studio" class="mx-1 rounded-box" />
+          <img src="/img/isha6.avif" alt="UA Studio" class="mx-1 rounded-box" />
+        </div>
+      </div>
     </div>
 
     <!-- Open the modal using ID.showModal() method -->
@@ -226,46 +321,58 @@
       </div>
     </dialog>
 
-    <dialog id="modalSuryaKriya" class="modal text-primary-content">
-      <div class="prose modal-box">
-        <img class="rounded-box" src="/img/surya-kriya-modal.avif" alt="Surya Kriya" />
-        <h3>Surya Kriya (2 sessions x 3.5 hours)</h3>
-        <p>
-          <b>Surya Kriya</b>
-          — solar energy is the fundamental energy and that is so even within human body. Surya
-          Kriya is a powerful process of activating the sun within you. It generates sun energy
-          within the system and body begins to glow and shine. On a psychical level this process
-          balances glandular secretion, mucus level and cures backache. There is also profound
-          dimension to it. It is a way of adjusting human energy system to the celestial geometry,
-          so that you are in sync with the existence. It is being in sync with a nature on many
-          different levels.
-        </p>
-        <p>
-          <b>Surya Kriya includes several aspects that enrich one's life:</b>
-        </p>
-        <ul>
-          <li>Develops mental clarity and focus</li>
-          <li>Remedies weak constitutions</li>
-          <li>Boosts vigor and vitality</li>
-          <li>Balances hormonal levels in the body</li>
-          <li>Prepares one for deeper states of meditation</li>
-        </ul>
-        <iframe
-          style="aspect-ratio: 16 / 9"
-          width="100%"
-          src="https://www.youtube-nocookie.com/embed/_wq-OiPk-pU?si=KRkKxIfAchd3CvSj"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
-        <div class="modal-action">
-          <form method="dialog">
-            <!-- if there is a button in form, it will close the modal -->
-            <button class="btn">Close</button>
-          </form>
+    <div class="bg-base-200 px-6 py-12">
+      <h1 class="text-5xl font-bold" id="sharings">Sharings</h1>
+      <div class="py-6">
+        <div class="sharing">
+          <p>
+            "From the very beginning of my journey in yoga I was interested in "something profound"
+            that is not told in ordinary classes. I was looking for the very knowlege that
+            completely transforms a person as a being and ones life, as a path. It seems, I found
+            the 'this very knowlege'. A path that will lead a person to a completely different level
+            of development. Breathing, movement of the body, inner sensations - all become ONE in
+            Surya Kriya."
+          </p>
+          <b class="text-accent">– Yulia</b>
+        </div>
+        <div class="sharing">
+          <div>
+            I started doing Hatha Yoga at the age of 43 years. My body was rigid. A few years after
+            doing Isha Hatha Yoga, I became flexible enough to run marathons with just a few days of
+            practice. Body aches and tiredness are things of the past. Energy levels are at a high
+            level throughout the day. The need for sleep has reduced from 8 to 9 hours a day to less
+            than 7 hours. The body has not been a stumbling block for any activity, however
+            strenuous. Body, mind, emotion and energy are in sync and there is complete balance and
+            mental clarity with no stress!
+          </div>
+          <b class="text-accent">– Sadashiv S. Rao, CEO, NIIF Infrastructure Finance Limited.</b>
+        </div>
+        <div class="sharing">
+          <div>
+            I noticed a difference in terms of my productivity at work. After practicing Surya
+            Kriya, I am able to just pay attention to what I need to do at that time. I am able to
+            focus for a longer period of time as well..
+          </div>
+          <b class="text-accent">– Simone, United States</b>
+        </div>
+        <div class="sharing">
+          <div>
+            The kind of flexibility and strength Angamardhana can give you, nothing else can do
+            that. You can see amazing results in such a short period of time.
+          </div>
+          <b class="text-accent">– Vasundhara, India</b>
+        </div>
+        <div class="sharing">
+          <div>
+            Surya Kriya works miracles! Suddenly, many asanas became profounder and today I
+            accidentally discovered that I could fall into the twine (just recently coundn't reach
+            20-30 cm). Finally, i got a burst of strength and energy. I'm so glad I bumped into this
+            practice. Thank you once again!
+          </div>
+          <b class="text-accent">– Anastasia</b>
         </div>
       </div>
-    </dialog>
+    </div>
 
     <footer class="footer footer-center bg-accent p-10 text-primary-content">
       <aside>
