--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
             <li><a href="#schedule">Schedule</a></li>
             <li><a href="#programs-info">Our Programs</a></li>
             <li><a href="#school">About School</a></li>
+            <li><a href="#sharings">Sharings</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost text-xl">Bhavya Yoga</a>
@@ -57,6 +58,7 @@
           <li><a href="#schedule">Schedule</a></li>
           <li><a href="#programs-info">Our Programs</a></li>
           <li><a href="#school">About School</a></li>
+          <li><a href="#sharings">Sharings</a></li>
         </ul>
       </div>
       <div class="navbar-end">
@@ -137,9 +139,7 @@
               </p>
               <div class="card-actions justify-start">
                 <button class="btn btn-accent" onclick="modalApply.showModal()">Apply</button>
-                <button class="btn btn-outline btn-accent" onclick="modalSuryaKriya.showModal()">
-                  Learn More
-                </button>
+                <a href="#surya-kriya-info" class="btn btn-outline btn-accent">Learn More</a>
               </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
 
       <h1 class="pb-6 pt-12 text-5xl font-bold" id="programs-info">Our Programs</h1>
 
-      <details class="collapse collapse-arrow my-2 bg-base-200">
+      <details class="collapse collapse-arrow my-2 bg-base-200" id="surya-kriya-info">
         <summary class="collapse-title text-xl font-medium">
           <div class="mask grid grid-cols-[120px,auto] gap-1">
             <div class="avatar">
@@ -255,45 +255,37 @@
         people around the world, including India, Great Britain, Singapore, Australia, China,
         Canada, United States and Ukraine.
       </p>
-    </div>
+      <img src="./img/sadhguru1.jpg" class="mask mask-squircle m-auto max-w-72 shadow-2xl" />
 
-    <div class="bg-accent py-6 text-neutral-content" id="school">
-      <div class="hero-content flex-col pb-6 lg:flex-row-reverse">
-        <div>
-          <figure class="mx-auto max-w-screen-md text-center">
-            <svg
-              class="mx-auto mb-3 h-10 w-10 text-gray-400 dark:text-gray-600"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 18 14">
-              <path
-                d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
-            </svg>
-            <blockquote>
-              <p class="text-xl font-medium italic">
-                The word "Yoga" means union. When you are in yoga, you experience everything as a
-                part of yourself and that is ultimate freedom.
-              </p>
-            </blockquote>
-            <figcaption class="mt-6 flex items-center justify-center space-x-3 rtl:space-x-reverse">
-              <div
-                class="flex items-center divide-x-2 divide-gray-500 rtl:divide-x-reverse dark:divide-gray-700">
-                <cite class="pe-3 font-medium">Sadhguru</cite>
-                <cite class="ps-3 text-sm">
-                  founder of
-                  <a href="https://isha.sadhguru.org/" class="link" target="_blank">
-                    Isha foundation
-                  </a>
-                </cite>
-              </div>
-            </figcaption>
-          </figure>
-        </div>
-        <img src="./img/sadhguru1.jpg" class="mask mask-squircle m-auto max-w-72 shadow-2xl" />
-      </div>
+      <figure class="mx-auto my-6 max-w-screen-md text-center">
+        <svg
+          class="mx-auto mb-3 h-10 w-10"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="currentColor"
+          viewBox="0 0 18 14">
+          <path
+            d="M6 0H2a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3H2a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Zm10 0h-4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h4v1a3 3 0 0 1-3 3h-1a1 1 0 0 0 0 2h1a5.006 5.006 0 0 0 5-5V2a2 2 0 0 0-2-2Z" />
+        </svg>
+        <blockquote>
+          <p class="text-xl font-medium italic">
+            The word "Yoga" means union. When you are in yoga, you experience everything as a part
+            of yourself and that is ultimate freedom.
+          </p>
+        </blockquote>
+        <figcaption class="mt-6 flex items-center justify-center space-x-3 rtl:space-x-reverse">
+          <div
+            class="flex items-center divide-x-2 divide-gray-500 rtl:divide-x-reverse dark:divide-gray-700">
+            <cite class="pe-3 font-medium">Sadhguru</cite>
+            <cite class="ps-3 text-sm">
+              founder of
+              <a href="https://isha.sadhguru.org/" class="link" target="_blank">Isha foundation</a>
+            </cite>
+          </div>
+        </figcaption>
+      </figure>
 
-      <div class="carousel carousel-center h-80">
+      <div class="carousel carousel-center h-80" id="uaStudioCarousel">
         <div class="carousel-item">
           <img src="/img/isha9.avif" alt="UA Studio" class="mx-1 rounded-box" />
           <img src="/img/isha4.avif" alt="UA Studio" class="mx-1 rounded-box" />
@@ -321,57 +313,73 @@
       </div>
     </dialog>
 
-    <div class="bg-base-200 px-6 py-12">
+    <div class="bg-base-100 px-6 py-12">
       <h1 class="text-5xl font-bold" id="sharings">Sharings</h1>
-      <div class="py-6">
+      <div class="py-2 text-center">
         <div class="sharing">
-          <p>
+          <div class="text-left">
             "From the very beginning of my journey in yoga I was interested in "something profound"
             that is not told in ordinary classes. I was looking for the very knowlege that
             completely transforms a person as a being and ones life, as a path. It seems, I found
             the 'this very knowlege'. A path that will lead a person to a completely different level
             of development. Breathing, movement of the body, inner sensations - all become ONE in
             Surya Kriya."
-          </p>
+          </div>
           <b class="text-accent">– Yulia</b>
         </div>
         <div class="sharing">
-          <div>
-            I started doing Hatha Yoga at the age of 43 years. My body was rigid. A few years after
+          <div class="text-left">
+            "I started doing Hatha Yoga at the age of 43 years. My body was rigid. A few years after
             doing Isha Hatha Yoga, I became flexible enough to run marathons with just a few days of
             practice. Body aches and tiredness are things of the past. Energy levels are at a high
             level throughout the day. The need for sleep has reduced from 8 to 9 hours a day to less
             than 7 hours. The body has not been a stumbling block for any activity, however
             strenuous. Body, mind, emotion and energy are in sync and there is complete balance and
-            mental clarity with no stress!
+            mental clarity with no stress!"
           </div>
-          <b class="text-accent">– Sadashiv S. Rao, CEO, NIIF Infrastructure Finance Limited.</b>
+          <b class="text-accent">– Sadashiv, India</b>
         </div>
         <div class="sharing">
-          <div>
-            I noticed a difference in terms of my productivity at work. After practicing Surya
+          <div class="text-left">
+            "Surya Kriya works miracles! Suddenly, many asanas became profounder and today I
+            accidentally discovered that I could fall into the twine (just recently coundn't reach
+            20-30 cm). Finally, i got a burst of strength and energy. I'm so glad I bumped into this
+            practice. Thank you once again!"
+          </div>
+          <b class="text-accent">– Anastasia</b>
+        </div>
+        <div class="sharing">
+          <div class="text-left">
+            "I noticed a difference in terms of my productivity at work. After practicing Surya
             Kriya, I am able to just pay attention to what I need to do at that time. I am able to
-            focus for a longer period of time as well..
+            focus for a longer period of time as well..."
           </div>
           <b class="text-accent">– Simone, United States</b>
         </div>
         <div class="sharing">
-          <div>
-            The kind of flexibility and strength Angamardhana can give you, nothing else can do
-            that. You can see amazing results in such a short period of time.
+          <div class="text-left">
+            "The kind of flexibility and strength Angamardhana can give you, nothing else can do
+            that. You can see amazing results in such a short period of time."
           </div>
           <b class="text-accent">– Vasundhara, India</b>
         </div>
-        <div class="sharing">
-          <div>
-            Surya Kriya works miracles! Suddenly, many asanas became profounder and today I
-            accidentally discovered that I could fall into the twine (just recently coundn't reach
-            20-30 cm). Finally, i got a burst of strength and energy. I'm so glad I bumped into this
-            practice. Thank you once again!
-          </div>
-          <b class="text-accent">– Anastasia</b>
-        </div>
       </div>
+    </div>
+
+    <div class="bg-base-200 px-6 py-12 text-center">
+      <button class="btn btn-accent btn-lg mx-auto" onclick="modalApply.showModal()">
+        Apply for the Program
+      </button>
+      <p class="prose mx-auto mt-6">
+        We have great scale of programs designed by Sadhguru rooted in Classical Hatha Yoga in its
+        depth and dimension.
+      </p>
+      <br />
+      <p class="prose mx-auto">
+        If you don't see programs scheduled in "Upcoming programs" or if you want to develop certain
+        aspects of your life pls drop us a message. We will find optimal program and make it happen
+        for you.
+      </p>
     </div>
 
     <footer class="footer footer-center bg-accent p-10 text-primary-content">
