--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="navbar-end">
         <a href="/ua" class="btn btn-outline btn-accent btn-sm mx-3">En</a>
-        <a class="btn btn-accent btn-sm">Apply</a>
+        <button class="btn btn-accent btn-sm" onclick="modalApply.showModal()">Apply</button>
       </div>
     </div>
 
