--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Angela Pelekh</title>
+    <title>Bhavya Yoga</title>
     <link rel="icon" type="image/png" href="./isha-logo.png" />
     <link rel="stylesheet" href="./output.css" />
     <script src="./script.js" defer></script>
@@ -48,6 +48,7 @@
             <li><a href="#programs-info">Our Programs</a></li>
             <li><a href="#school">About School</a></li>
             <li><a href="#sharings">Sharings</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
         <a class="btn btn-ghost text-xl">Bhavya Yoga</a>
@@ -59,6 +60,7 @@
           <li><a href="#programs-info">Our Programs</a></li>
           <li><a href="#school">About School</a></li>
           <li><a href="#sharings">Sharings</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
       <div class="navbar-end">
@@ -107,17 +109,17 @@
 
       <div class="carousel carousel-center h-80">
         <div class="carousel-item">
-          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1 rounded-box" />
-          <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1 rounded-box" />
-          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1 rounded-box" />
-          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1 rounded-box" />
+          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
+          <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
+          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
+          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
         </div>
       </div>
       <p class="merriweather text-base">
         In 2018 I built a small studio in the Carpathians, where retreats and most Ukranian programs
-        are held. Although this place is quite high in the mountains .. but the programs there are
-        great (it feels like a small ashram in Ukraine). We have Sannidhi there, and a process is
-        held on Mondays by one meditator who lives there.
+        are held. This place is quite high in the mountains, and the programs there are great (it
+        feels like a small ashram in Ukraine). We have Sannidhi there, and a process is held on
+        Mondays by one meditator who lives there.
       </p>
     </div>
 
@@ -165,6 +167,46 @@
       </div>
 
       <h1 class="pb-6 pt-12 text-5xl font-bold" id="programs-info">Our Programs</h1>
+
+      <details class="collapse collapse-arrow my-2 bg-base-200">
+        <summary class="collapse-title text-xl font-medium">
+          <div class="mask grid grid-cols-[120px,auto] gap-1">
+            <div class="avatar">
+              <div class="mask mask-squircle w-24">
+                <img src="/img/upa-yoga-sq.avif" />
+              </div>
+            </div>
+            <div class="prose">
+              <h3>Upa yoga</h3>
+              <p>
+                2 sessions x 2 h
+                <b>or</b>
+                <br />
+                1 session x 3,5 h
+              </p>
+            </div>
+          </div>
+        </summary>
+        <div class="prose collapse-content mx-auto">
+          <lite-youtube videoid="tVZcK9pjI9I" playlabel="Play"></lite-youtube>
+          <p>
+            <b>Upa Yoga</b>
+            — is a system of yoga which is not strongly oriented towards the spiritual, and more
+            towards the physical, emotional, psychological and energy dimensions of a human being.
+            You learn to activate lubrication of joint and energy nodes, activate spine and balances
+            energy system.
+          </p>
+          <p>
+            <b>Upa Yoga has numerous benefits:</b>
+          </p>
+          <ul>
+            <li>Relieves physical stress and tiredness</li>
+            <li>Strengthens the joints and muscles</li>
+            <li>Rejuvenates the body after periods of inactivity</li>
+            <li>Negates the effects of jetlag and long travel</li>
+          </ul>
+        </div>
+      </details>
 
       <details class="collapse collapse-arrow my-2 bg-base-200" id="surya-kriya-info">
         <summary class="collapse-title text-xl font-medium">
@@ -245,6 +287,80 @@
           </ul>
         </div>
       </details>
+
+      <details class="collapse collapse-arrow my-2 bg-base-200">
+        <summary class="collapse-title text-xl font-medium">
+          <div class="mask grid grid-cols-[120px,auto] gap-1">
+            <div class="avatar">
+              <div class="mask mask-squircle w-24">
+                <img src="/img/bhuta-shuddhi-sq.avif" />
+              </div>
+            </div>
+            <div class="prose">
+              <h3>Bhuta Shuddhi</h3>
+              <p>1 session x 1,5 h</p>
+            </div>
+          </div>
+        </summary>
+        <div class="prose collapse-content mx-auto">
+          <lite-youtube videoid="hc9g8u77g24" playlabel="Play"></lite-youtube>
+          <p>
+            <b>Bhuta Shuddhi</b>
+            — this is the most fundamental practice in yogic system. Our body is just a
+            manifestation of five elements: earth, water, fire, air and space. "Bhuta" means
+            "elements" and "Shuddhi" means "to cleanse". In terms of health, wellbeing, perception,
+            knowing everything is handled if you know how to keep these five elements properly.
+          </p>
+          <p>
+            <b>Benefits:</b>
+          </p>
+          <ul>
+            <li>Keeps the system in harmony and balance</li>
+            <li>Prepares the system to handle powerful states of energy</li>
+            <li>Enhances the capabilities of the physical body, mind, and energy system</li>
+            <li>Creates the basis to gain complete mastery over the human system</li>
+          </ul>
+        </div>
+      </details>
+
+      <details class="collapse collapse-arrow my-2 bg-base-200">
+        <summary class="collapse-title text-xl font-medium">
+          <div class="mask grid grid-cols-[120px,auto] gap-1">
+            <div class="avatar">
+              <div class="mask mask-squircle w-24">
+                <img src="/img/yogasanas-sq.avif" />
+              </div>
+            </div>
+            <div class="prose">
+              <h3>Yogasanas</h3>
+              <p>4 sessions x 3 h</p>
+            </div>
+          </div>
+        </summary>
+        <div class="prose collapse-content mx-auto">
+          <lite-youtube videoid="4ZdcGKUQufU" playlabel="Play"></lite-youtube>
+          <p>
+            <b>Asanas</b>
+            — the word asana literately means "a posture". Every posture the body can take is an
+            asana. Certain postures are possibilities for elevating human consciousness.
+          </p>
+          <p>
+            Yogasanas are not exercises, this must be clearly understood. They are subtle processes
+            to direct and activate our energy in the particular direction, to bring us to a state
+            where we are a cosmos by our self. Practicing Yogasanas brings awareness, brings sense
+            of freedom and prepares a person to the higher level of consciousness.
+          </p>
+          <p>
+            <b>The practice of Yogasanas provides countless benefits including:</b>
+          </p>
+          <ul>
+            <li>Relief of chronic health conditions</li>
+            <li>Evolution of body and mind towards a higher possibility</li>
+            <li>Stabilization of the body, mind, and energy system</li>
+            <li>Deceleration of the aging process</li>
+          </ul>
+        </div>
+      </details>
     </div>
 
     <div class="bg-accent px-6 pt-12 text-neutral-content">
@@ -285,25 +401,43 @@
         </figcaption>
       </figure>
 
+      <p class="merriweather py-6 text-xl">
+        Sadhguru is a Yogi, Mistic, and Visionary who dedicated himself to the well-being of all. He
+        presents the Science of Yoga in a way that is relevant for modern times.
+      </p>
+
       <div class="carousel carousel-center h-80" id="uaStudioCarousel">
         <div class="carousel-item">
-          <img src="/img/isha9.avif" alt="UA Studio" class="mx-1 rounded-box" />
-          <img src="/img/isha4.avif" alt="UA Studio" class="mx-1 rounded-box" />
-          <img src="/img/isha6.avif" alt="UA Studio" class="mx-1 rounded-box" />
+          <img src="/img/isha4.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
+          <img src="/img/isha9.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
+          <img src="/img/isha6.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
         </div>
       </div>
+
+      <p class="merriweather py-6 text-xl">
+        Three decades ago, Sadhguru founded the Isha Foundation. It is a volunteer-run non-profit
+        organization, which works towards fostering world harmony through individual transformation.
+        Today Isha operates over 300 centers worldwide with the help of over 11 million volunteers.
+      </p>
     </div>
+
+    <!-- <script>
+      const uaStudioCarousel = document.getElementById(uaStudioCarousel);
+    </script> -->
 
     <!-- Open the modal using ID.showModal() method -->
     <dialog id="modalApply" class="modal">
       <div class="modal-box">
-        <h3 class="text-lg font-bold">Apply</h3>
-        <p class="py-4">
-          If you want to apply for a program please message Angela in Telegram:
-          <a href="https://t.me/angelapelekh" target="_blank" class="btn btn-accent btn-sm">
-            @AngelaPelekh
-          </a>
+        <p class="prose py-4">
+          <img src="./img/ava1.avif" class="mask mask-squircle m-auto max-w-72 shadow-2xl" />
+          If you want to apply for a program please message Angela in Telegram (@AngelaPelekh):
+          <br />
         </p>
+        <div class="text-center">
+          <a href="https://t.me/angelapelekh" target="_blank" class="btn btn-accent btn-sm">
+            Open Telegram
+          </a>
+        </div>
         <div class="modal-action">
           <form method="dialog">
             <!-- if there is a button in form, it will close the modal -->
@@ -313,21 +447,29 @@
       </div>
     </dialog>
 
-    <div class="bg-base-100 px-6 py-12">
+    <div class="bg-base-100 px-6 pb-6 pt-12">
       <h1 class="text-5xl font-bold" id="sharings">Sharings</h1>
       <div class="py-2 text-center">
         <div class="sharing">
-          <div class="text-left">
-            "From the very beginning of my journey in yoga I was interested in "something profound"
-            that is not told in ordinary classes. I was looking for the very knowlege that
-            completely transforms a person as a being and ones life, as a path. It seems, I found
-            the 'this very knowlege'. A path that will lead a person to a completely different level
-            of development. Breathing, movement of the body, inner sensations - all become ONE in
-            Surya Kriya."
+          <div class="avatar">
+            <div class="mask mask-squircle w-24">
+              <img src="/img/konstantin-ukraine.avif" />
+            </div>
           </div>
-          <b class="text-accent">– Yulia</b>
+          <div class="text-left">
+            "Sadhguru said that there is little that compares to Surya Kriya in the way it develops
+            your mind. After 2-3 months of regular practice, I began to notice the change in my
+            perception and thought process during and immediately after doing Surya Kriya. My mind
+            becomes clear. What may appear as a simple gymnastics - in fact, it is not."
+          </div>
+          <b class="text-accent">– Konstantin, Ukraine</b>
         </div>
         <div class="sharing">
+          <div class="avatar">
+            <div class="mask mask-squircle w-24">
+              <img src="/img/sadashiv.avif" />
+            </div>
+          </div>
           <div class="text-left">
             "I started doing Hatha Yoga at the age of 43 years. My body was rigid. A few years after
             doing Isha Hatha Yoga, I became flexible enough to run marathons with just a few days of
@@ -340,6 +482,11 @@
           <b class="text-accent">– Sadashiv, India</b>
         </div>
         <div class="sharing">
+          <div class="avatar">
+            <div class="mask mask-squircle w-24">
+              <img src="/img/shiva.avif" />
+            </div>
+          </div>
           <div class="text-left">
             "Surya Kriya works miracles! Suddenly, many asanas became profounder and today I
             accidentally discovered that I could fall into the twine (just recently coundn't reach
@@ -349,6 +496,11 @@
           <b class="text-accent">– Anastasia</b>
         </div>
         <div class="sharing">
+          <div class="avatar">
+            <div class="mask mask-squircle w-24">
+              <img src="/img/shiva.avif" />
+            </div>
+          </div>
           <div class="text-left">
             "I noticed a difference in terms of my productivity at work. After practicing Surya
             Kriya, I am able to just pay attention to what I need to do at that time. I am able to
@@ -357,6 +509,11 @@
           <b class="text-accent">– Simone, United States</b>
         </div>
         <div class="sharing">
+          <div class="avatar">
+            <div class="mask mask-squircle w-24">
+              <img src="/img/shiva.avif" />
+            </div>
+          </div>
           <div class="text-left">
             "The kind of flexibility and strength Angamardhana can give you, nothing else can do
             that. You can see amazing results in such a short period of time."
@@ -366,13 +523,13 @@
       </div>
     </div>
 
-    <div class="bg-base-200 px-6 py-12 text-center">
+    <div class="bg-base-100 px-6 pb-12 pt-6 text-center">
       <button class="btn btn-accent btn-lg mx-auto" onclick="modalApply.showModal()">
         Apply for the Program
       </button>
       <p class="prose mx-auto mt-6">
-        We have great scale of programs designed by Sadhguru rooted in Classical Hatha Yoga in its
-        depth and dimension.
+        We transmit the Classical Hatha Yoga in its full depth and dimension. It's designed by
+        Sadhguru and rootend in ancient Yogic science.
       </p>
       <br />
       <p class="prose mx-auto">
@@ -380,6 +537,24 @@
         aspects of your life pls drop us a message. We will find optimal program and make it happen
         for you.
       </p>
+    </div>
+
+    <div class="bg-base-200 px-6 py-12" id="contact">
+      <h1 class="text-5xl font-bold" id="sharings">Contact</h1>
+      <p class="prose mx-auto mt-6">
+        Ukranian Studio:
+        <a href="https://maps.app.goo.gl/rq1rjnd7psr4oNZh6" class="link" target="_blank">
+          Unnamed Road, Lybokhora, Lviv Oblast, Ukraine, 82633
+        </a>
+      </p>
+      <p class="prose mx-auto mt-6">
+        Phone:
+        <b>+1 734 7098058</b>
+        ( Viber,
+        <a href="https://t.me/angelapelekh" class="link" target="_blank">Telegram</a>
+        )
+      </p>
+      <p class="prose mx-auto mt-6">We speak: English, Ukranian, Russian.</p>
     </div>
 
     <footer class="footer footer-center bg-accent p-10 text-primary-content">
