proof reading fixes

--- a/src/index.html
+++ b/src/index.html
@@ -461,7 +461,7 @@
         <img src="/img/bhavya-yoga-logo.png" alt="Bhavya Yoga Logo" class="mx-1" />
       </center>
       <p class="merriweather py-6 text-xl">
-        The school's name "Bhayva Yoga" was given by Sadhguru, it means: the best yoga! 😇
+        The school's name, "Bhayva Yoga" was given by Sadhguru, which means: the best yoga! 😇
       </p>
     </div>
 
@@ -572,8 +572,8 @@
         Apply for the Program
       </button>
       <p class="prose mx-auto mt-6">
-        We transmit the Classical Hatha Yoga in its full depth and dimension. It's designed by
-        Sadhguru and rootend in ancient Yogic science.
+        We transmit the Classical Hatha Yoga in its full depth and dimension. It was designed by
+        Sadhguru and rooted in ancient Yogic science.
       </p>
       <br />
       <p class="prose mx-auto">
