--- a/src/index.html
+++ b/src/index.html
@@ -108,12 +108,12 @@
         twice in March and in the summer to be able to transfer these yogic practices.
       </p>
 
-      <div class="carousel carousel-center h-80">
+      <div class="carousel">
         <div class="carousel-item">
-          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
-          <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
-          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
-          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
+          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
         </div>
       </div>
       <p class="merriweather text-base">
@@ -443,11 +443,11 @@
         presents the Science of Yoga in a way that is relevant for modern times.
       </p>
 
-      <div class="carousel carousel-center h-80" id="uaStudioCarousel">
+      <div class="carousel" id="schoolCarousel">
         <div class="carousel-item">
-          <img src="/img/isha4.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
-          <img src="/img/isha9.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
-          <img src="/img/isha6.avif" alt="UA Studio" class="mx-1 rounded-3xl" />
+          <img src="/img/isha4.avif" alt="About Isha" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/isha9.avif" alt="About Isha" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/isha6.avif" alt="About Isha" class="mx-1 h-80 rounded-3xl" />
         </div>
       </div>
 
